--- a/PBSS/users/templates/users/post_form.html
+++ b/PBSS/users/templates/users/post_form.html
@@ -40,7 +40,7 @@
                                 </fieldset>
                                 <div class="form-group">
                                     <button class="btn btn-3 btn-sm btn-block" type="submit" href="{% url 'client' %}">
-                                        Add Client
+                                        Submit Information
                                     </button>
                                 </div>
                             </form>
