--- a/PBSS/form_fba/templates/brview.html
+++ b/PBSS/form_fba/templates/brview.html
@@ -15,6 +15,7 @@
                 <p style="text-align: center;">Manage work on daily basis.</p>
             </div>
         </div>
+           <a href="{% url 'std1' %}"><i class="fa fa-arrow-circle-left" style="font-size:40px; border: none; float: left; color: blue;"></i></a>
          {% if user.id == 28 %}
             <div class="form-group row">
                  <div class="intro" style="float: right; margin-bottom: 0%;"><a class="btn btn-3 btn-lg" type="submit"
@@ -28,7 +29,7 @@
         <div class="row heading">
             <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
 <!--                <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a> > <a href="#"> BR History</a></p>-->
-                <h4>BR Report</h4>
+                <h4>BR Report details</h4>
             </div>
         </div>
 
