--- a/PBSS/form_fba/templates/fbaindex.html
+++ b/PBSS/form_fba/templates/fbaindex.html
@@ -23,47 +23,49 @@
 <!--                <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a> > <a href="#"> Functional Behaviour-->
 <!--                    Assessment</a></p>-->
                 <h4>Functional Behaviour Assessment</h4>
-            </div>
-        </div>
 
+            </div>
+            <div class="col-sm-12">
+                    <p style="margin-bottom: 2%;">Hello <span style="font-weight:bold">{{ user.username }}, </span> Please Enter your details in FBA form.</p>
+                </div>
+        </div>
+        <div class="col-sm-6 box-item" style="text-align: left;">
+                            <div style="text-align: center; margin-top: 30%;">
+                                <img src="{% static 'images/checklist.png' %}" alt="checklist" class="checklist">
+                            </div>
+                        </div>
+         <div class="col-sm-6 box-item" style="text-align: left;">
         <form method="POST" class="post-form" action="/std/">
             {% csrf_token %}
-
-
             <br>
-
             <div class="form-group row">
-                <div class="col-sm-12">
-                    <p style="margin-bottom: 2%;">Hello <span style="font-weight:bold">{{ user.username }}, </span> Please Enter your details in FBA form.
-                        Client name is {{ form.client_name }} </p>
-                </div>
-            </div>
-
-            <div class="form-group row">
-
-                <label class="col-sm-2 col-form-label"> Client </label>
-                <div class="col-sm-4">{{ form.client }}</div>
 
             </div>
 
             <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Antecedent</label>
-                <div class="col-sm-4">{{ form.anticedent }}</div>
+                <label class="col-sm-6 col-form-label">Select Client name: </label>
+                <div class="col-sm-10">{{ form.client }}</div>
+
+            </div>
+
+            <div class="form-group row">
+                <label class="col-sm-3 col-form-label">Antecedent</label>
+                <div class="col-sm-10">{{ form.anticedent }}</div>
 
             </div>
             <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Behaviour</label>
-                <div class="col-sm-4">{{ form.behaviour }}</div>
+                <label class="col-sm-3 col-form-label">Behaviour</label>
+                <div class="col-sm-10">{{ form.behaviour }}</div>
 
             </div>
             <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Consequence</label>
-                <div class="col-sm-4">{{ form.consequence }}</div>
+                <label class="col-sm-3 col-form-label">Consequence</label>
+                <div class="col-sm-10">{{ form.consequence }}</div>
 
             </div>
             <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Intensity</label>
-                <div class="col-sm-4">{{ form.intensity }}</div>
+                <label class="col-sm-3 col-form-label">Intensity</label>
+                <div class="col-sm-10">{{ form.intensity }}</div>
             </div>
             {% if form.errors %}
                 {% for field in form %}
@@ -88,7 +90,8 @@
     </div>
     </div></div></div>
 </main>
-</div>
+
+</div></div>
 
 {% endif %}
 
