--- a/PBSS/form_fba/templates/view.html
+++ b/PBSS/form_fba/templates/view.html
@@ -15,12 +15,12 @@
                 <p style="text-align: center;">Manage work on daily basis.</p>
             </div>
         </div>
-
+           <a href="{% url 'std' %}"><i class="fa fa-arrow-circle-left" style="font-size:40px; border: none; float: left; color: blue;"></i></a>
         <div class="row heading">
             <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
 <!--                <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a> > <a href="#"> Functional Behaviour-->
 <!--                    Assessment</a></p>-->
-                <h4>Functional Behaviour Assessment</h4>
+                <h4>Functional Behaviour Assessment Details</h4>
             </div>
         </div>
 
