80% of feedback done and corrected
Co-Authored-By: VickyDesai <anninomi@users.noreply.github.com>

--- a/PBSS/businessleader/templates/businessleader/base.html
+++ b/PBSS/businessleader/templates/businessleader/base.html
@@ -36,7 +36,7 @@
                                 </fieldset>
                                 <div class="form-group">
                                     <button class="btn btn-3 btn-sm btn-block" type="submit" href="{% url 'client' %}">
-                                        Add Client
+                                        Add Support Worker
                                     </button>
                                 </div>
                             </form>
