--- a/PBSS/businessleader/templates/businessleader/swlist.html
+++ b/PBSS/businessleader/templates/businessleader/swlist.html
@@ -12,12 +12,22 @@
           <p style="text-align: center;">Manage work on daily basis.</p>
         </div>
       </div>
+
          <div class="container">
                     <div class="row heading">
                          <div class="row heading">
                         <div class="intro" style="float: right; margin-bottom: 0%;"><a class="btn btn-3 btn-lg" type="submit"
                                                                                             href="{% url 'businessleader' %}" style="float: right; margin-right: 4%;">
                             <span>Add New Support Worker</span></a>
+                                   <div>
+                {% if messages %}
+                {% for message in messages %}
+                <div class="alert alert-{{ message.tags }}" style="text-align: center">
+                    {{ message }}
+                </div>
+                {% endfor %}
+                {% endif %}
+            </div>
                   <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
 
                           <!--  <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a></p> -->
