--- a/PBSS/users/templates/users/post_detail.html
+++ b/PBSS/users/templates/users/post_detail.html
@@ -12,11 +12,11 @@
                 <a href="{% url 'client' %}"><i class="fa fa-arrow-circle-left"
                                                 style="font-size:40px; border: none; float: left; color: blue;"></i></a>
 
-                <div class="intro" style="float: right; margin-bottom: 0%;"><a class="btn btn-3 btn-lg" type="submit"
-                                                                               href="{% url 'client-create' %}">
-                    <span>New Client</span>
-                </a>
-                </div>
+<!--                <div class="intro" style="float: right; margin-bottom: 0%;"><a class="btn btn-3 btn-lg" type="submit"-->
+<!--                                                                               href="{% url 'client-create' %}">-->
+<!--                    <span>New Client</span>-->
+<!--                </a>-->
+<!--                </div>-->
 
             </div>
         </div>
