--- a/PBSS/users/templates/users/profile.html
+++ b/PBSS/users/templates/users/profile.html
@@ -21,6 +21,15 @@
                     <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
 
                         <!--  <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a></p> -->
+                         <div>
+                {% if messages %}
+                {% for message in messages %}
+                <div class="alert alert-{{ message.tags }}" style="text-align: center">
+                    {{ message }}
+                </div>
+                {% endfor %}
+                {% endif %}
+            </div>
                         <h2 style="text-align: center;">Client Lists - ({{page_obj.paginator.count}})</h2>
 
                         <br><br>
@@ -47,7 +56,7 @@
                                 <br>
                                 <div class="intro" style="float: right; margin-left: 1%; "><a class="btn btn-2 btn-lg"
                                                                                               type="submit"
-                                                                                              href="{% url 'profile' post.id %}">Account Settings</a></div>
+                                                                                              href="{% url 'profile' post.id %}">Manage Client</a></div>
                             </div>
 
                             {% endfor %}
