--- a/PBSS/form_fba/templates/fbaindex.html
+++ b/PBSS/form_fba/templates/fbaindex.html
@@ -29,12 +29,8 @@
                     <p style="margin-bottom: 2%;">Hello <span style="font-weight:bold">{{ user.username }}, </span> Please Enter your details in FBA form.</p>
                 </div>
         </div>
-        <div class="col-sm-6 box-item" style="text-align: left;">
-                            <div style="text-align: center; margin-top: 30%;">
-                                <img src="{% static 'images/checklist.png' %}" alt="checklist" class="checklist">
-                            </div>
-                        </div>
-         <div class="col-sm-6 box-item" style="text-align: left;">
+         <div class="col-sm-6 box-item" style="text-align: left; -webkit-box-shadow: 0 10px 6px -6px #777;-moz-box-shadow: 0 10px 6px -6px #777;
+            box-shadow: 0 10px 16px -6px #777;">
         <form method="POST" class="post-form" action="/std/">
             {% csrf_token %}
             <br>
@@ -44,28 +40,28 @@
 
             <div class="form-group row">
                 <label class="col-sm-6 col-form-label">Select Client name: </label>
-                <div class="col-sm-10">{{ form.client }}</div>
+                <div class="col-sm-12">{{ form.client }}</div>
 
             </div>
 
             <div class="form-group row">
                 <label class="col-sm-3 col-form-label">Antecedent</label>
-                <div class="col-sm-10">{{ form.anticedent }}</div>
+                <div class="col-sm-12">{{ form.anticedent }}</div>
 
             </div>
             <div class="form-group row">
                 <label class="col-sm-3 col-form-label">Behaviour</label>
-                <div class="col-sm-10">{{ form.behaviour }}</div>
+                <div class="col-sm-12">{{ form.behaviour }}</div>
 
             </div>
             <div class="form-group row">
                 <label class="col-sm-3 col-form-label">Consequence</label>
-                <div class="col-sm-10">{{ form.consequence }}</div>
+                <div class="col-sm-12">{{ form.consequence }}</div>
 
             </div>
             <div class="form-group row">
                 <label class="col-sm-3 col-form-label">Intensity</label>
-                <div class="col-sm-10">{{ form.intensity }}</div>
+                <div class="col-sm-12">{{ form.intensity }}</div>
             </div>
             {% if form.errors %}
                 {% for field in form %}
@@ -88,11 +84,18 @@
         </form>
 
     </div>
-    </div></div></div>
+        <div class="col-sm-6 box-item" style="text-align: left;">
+                            <div style="text-align: center; margin-top: 30%;">
+                                <img src="{% static 'images/checklist.png' %}" alt="checklist" class="checklist">
+                            </div>
+                        </div>
+    </div>
+
+    </div>
+    </div>
 </main>
 
 </div></div>
-
 {% endif %}
 
 {% endblock content %}
