--- a/PBSS/freefbaform/templates/freefbaform/freefbaform.html
+++ b/PBSS/freefbaform/templates/freefbaform/freefbaform.html
@@ -12,6 +12,8 @@
                 </div>
             </div>
             <div class="row">
+                <a href="{% url 'index' %}"><i class="fa fa-arrow-circle-left"
+                                                style="font-size:40px; border: none; float: left; color: blue; margin-left: 5%;"></i></a>
                 <div class="col-sm-12">
                     <div id="Noprint">
                         <div class="row box-item"><br><br>
