--- a/PBSS/positivebehaviour/templates/positivebehaviour/index.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/index.html
@@ -85,7 +85,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4 class="subheading">Better understanding</h4>
+                                    <h4 class="subheading">Data Visualization</h4>
                                 </div>
                                 <div class="timeline-body"><br>
                                     <p class="text-muted" style="line-height: 2;">Integrating all the collected data
