--- a/PBSS/businessleader/templates/businessleader/swlist.html
+++ b/PBSS/businessleader/templates/businessleader/swlist.html
@@ -15,11 +15,7 @@
 
          <div class="container">
                     <div class="row heading">
-                         <div class="row heading">
-                        <div class="intro" style="float: right; margin-bottom: 0%;"><a class="btn btn-3 btn-lg" type="submit"
-                                                                                            href="{% url 'businessleader' %}" style="float: right; margin-right: 4%;">
-                            <span>Add New Support Worker</span></a>
-                                   <div>
+                                         <div>
                 {% if messages %}
                 {% for message in messages %}
                 <div class="alert alert-{{ message.tags }}" style="text-align: center">
@@ -28,6 +24,14 @@
                 {% endfor %}
                 {% endif %}
             </div>
+                         <div class="row heading">
+                                 <a href="{% url 'businessleader' %}"><i class="fa fa-arrow-circle-left"
+                                                style="font-size:40px; border: none; float: left; color: blue;"></i></a>
+
+                        <div class="intro" style="float: right; margin-bottom: 0%;"><a class="btn btn-3 btn-lg" type="submit"
+                                                                                            href="{% url 'businessleader' %}" style="float: right; margin-right: 4%;">
+                            <span>Add New Support Worker</span></a>
+
                   <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
 
                           <!--  <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a></p> -->
