--- a/PBSS/users/templates/users/post_form.html
+++ b/PBSS/users/templates/users/post_form.html
@@ -16,9 +16,13 @@
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="container">
+                     <a href="{% url 'client' %}"><i class="fa fa-arrow-circle-left"
+                                                style="font-size:40px; border: none; float: left; color: blue;"></i></a>
+
                     <div class="row heading">
                         <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
                             <!--                            <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a> > <a href=""> Add a new client</a></p>-->
+
                             <h4>Enter information</h4>
                         </div>
                     </div>
@@ -31,7 +35,8 @@
                                 <img src="{% static 'images/checklist.png' %}" alt="checklist" class="checklist">
                             </div>
                         </div>
-                        <div class="col-sm-6 box-item" style="text-align: left;">
+                        <div class="col-sm-6 box-item" style="text-align: left;-webkit-box-shadow: 0 10px 6px -6px #777;-moz-box-shadow: 0 10px 6px -6px #777;
+            box-shadow: 0 10px 16px -6px #777;">
                             <form method="POST" style="">
                                 {% csrf_token %}
                                 <fieldset class="form-group">
