--- a/PBSS/form_fba/templates/view.html
+++ b/PBSS/form_fba/templates/view.html
@@ -41,23 +41,24 @@
     <thead class="thead-dark">
     <br><br>
     <tr style="font-weight: bold;">
-
+        <th>Client</th>
         <th>Antecedent</th>
         <th>Behaviour</th>
         <th>Consequence</th>
         <th>Intensity</th>
-        <th>Client</th>
+
 
     </tr>
     </thead>
     {% for forms in form_fba %}
     <tr>
-
+        <td>{{ forms.client}}</td>
         <td>{{ forms.anticedent }} </td>
         <td>{{ forms.behaviour }} </td>
         <td>{{ forms.consequence }} </td>
         <td>{{ forms.intensity }} </td>
-         <td><a href="{% url 'DetailView' forms.id %}">{{ forms.client}}</a></td>
+
+
         <td>
             <a href="/edit/{{ forms.id }}"> <span class="glyphicon glyphicon-pencil"></span> Edit </a></td>
             <td><a href="/delete/{{ forms.id }}"> Delete </a>
